# gmslib

./: .gitignore
src/: CMakeLists.txt
src/ext/: nanoply.hpp
src/gmslib/: base.hpp  geom.hpp  mixture.hpp  parallel.hpp  pointindex.hpp  vec.hpp
src/pytorch_bindings/: compute_mixture.py  gms_compute_mixture_binding.cpp
